<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".RegistroFragment">

    <TextView
        android:id="@+id/passwordTitulo2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/iniciosesion_password_Titulo"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/passwordInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.088"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/passwordInput2"
        android:layout_width="350dp"
        android:layout_height="35dp"
        android:layout_marginTop="44dp"
        android:autofillHints=""
        android:background="@drawable/bordes_input"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="@string/iniciosesion_password_Hint"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordInput" />

    <ImageView
        android:id="@+id/logoDoctor"
        android:layout_width="211dp"
        android:layout_height="231dp"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/iniciosesion_descripcion_ImageView"
        android:src="@drawable/doctor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/iniciarTitulo"
        android:layout_width="313dp"
        android:layout_height="33dp"
        android:layout_marginTop="24dp"
        android:autoSizeTextType="none"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/registrosesion_titulo_Text"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoDoctor" />

    <Button
        android:id="@+id/ingresarButton"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="132dp"
        android:background="@drawable/bordes_botones"
        android:text="@string/registrosesion_registrarse_Text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordInput" />

    <EditText
        android:id="@+id/correoInput"
        android:layout_width="350dp"
        android:layout_height="35dp"
        android:layout_marginTop="56dp"
        android:autofillHints=""
        android:background="@drawable/bordes_input"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="@string/iniciosesion_correo_Hint"
        android:inputType="text"
        android:textSize="14sp"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iniciarTitulo" />

    <TextView
        android:id="@+id/correoTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/iniciosesion_correo_Titulo"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/correoInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.101"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/passwordInput"
        android:layout_width="350dp"
        android:layout_height="35dp"
        android:layout_marginTop="44dp"
        android:autofillHints=""
        android:background="@drawable/bordes_input"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="@string/iniciosesion_password_Hint"
        android:inputType="textPassword"
        android:textSize="14sp"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/correoInput" />

    <TextView
        android:id="@+id/passwordTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/registrosesion_password_Titulo2"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/passwordInput2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.101"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/loguearseButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="11sp"
        android:background="@android:color/transparent"
        android:text="@string/registrosesion_tienecuenta_Button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ingresarButton" />


</androidx.constraintlayout.widget.ConstraintLayout>